# freezer

./: CMakeLists.txt  Main.qml  PeremetersPanel.qml  PopUpStart.qml  PopUpStop.qml  ProcessItemDelegate.qml  RadialBarShape.qml  SetpointField.qml  SettingsPanel.qml  StatusCard.qml  dbapi.cpp  dbapi.h  dbmanager.cpp  dbmanager.h  main.cpp  processitem.cpp  processitem.h  processmodel.cpp  processmodel.h  product.cpp  product.h  productsmodel.cpp  productsmodel.h  readsensor.cpp  readsensor.h
